[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ProtectiveOrderActionPlan"
version = "2025.12.18"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Caroline Robinson", email = "CRobinson@akcourts.gov" },
]
dependencies = [
    "docassemble.AKA2JBranding @ git+https://github.com/A2JatAKCourts/docassemble-AKA2JBranding.git@main",
    "docassemble.AssemblyLine>=4.2.0",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
